# TinyRaytracerInRust

./: Cargo.toml  globes.scene
src/: main.rs
src/raydebugger/: debug_shape.rs  debug_window.rs  easy_pixbuf.rs  gui.rs  mod.rs  ray_debugger.rs
src/raytracer/: antialiaser.rs  camera.rs  color.rs  csg.rs  material.rs  math.rs  math_shapes.rs  mod.rs  point_light.rs  raytracer.rs  rt_object.rs  texture.rs  transformation.rs  vector.rs
src/sceneparser/: ast_node.rs  context.rs  mod.rs  scene_grammar.pest  scene_loader.rs  shape.rs  texture.rs  value.rs
src/scenes/: fractal.scene  ground_star.scene  spinning_cube.scene  spinning_gimbals.scene  spinning_globes.scene  three_cubes.scene  world_map.scene
