[package]
name = "rust-tinyraytracer"
version = "0.1.0"
authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.1.2"
pest = "2.1.2"
pest_derive = "2.1.0"
glib = "0.8.1"
gtk = "0.7.0"
gdk = "0.11.0"
cairo-rs = "0.7.1"
gio = "0.7.0"
threadpool = "1.7.1"

#[dependencies.gtk]
#version = "0.4.1"
#default-features = false
#features = ["v3_20"]

#[dependencies.cairo-rs]
#version = "0.4.1"

#[dependencies.gdk]
#version = "0.8.0"
